<!--
  ~    Copyright 2015 Gian Ulli
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
	<string name="app_name">Flashcards for Trello</string>
	<string name="title_activity_main">Flashcards</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="error">Error</string>
	<string name="trello_not_accessible">Trello is currently not accessible. Please make sure that your are connected to the internet.</string>
	<string name="you_have_no_boards">You have no boards.</string>
	<string name="board_contains_no_lists">This board contains no lists.</string>
	<string name="some_cards">%1$d cards</string>
	<string name="one_card">1 card</string>
	<string name="no_cards">No cards</string>
	<string name="hide_boards">Hide boards</string>
	<string name="select_uc">Select</string>
	<string name="cards">cards</string>
	<string name="start_session">Start Session</string>
	<string name="settings">Settings</string>
	<string name="refresh">Refresh</string>
	<string name="title_activity_session">SessionActivity</string>
	<string name="page_indicator_text">%1$d / %2$d</string>
	<string name="wrong">Wrong</string>
	<string name="correct">Correct</string>
	<string name="session_finished">You finished this session! You answered %1$d of %2$d cards correctly.</string>
	<string name="ok">OK</string>
	<string name="set_font_size">Set font size</string>
	<string name="reset_hidden_boards_are_you_sure">Reset hidden boards?</string>
	<string name="reset">Reset</string>
	<string name="cancel">Cancel</string>
	<string name="set_font_size_desc">Set the font size of text on flashcards</string>
	<string name="reset_hidden_boards">Reset hidden boards</string>
	<string name="move_correct_cards">Move correct cards to</string>
	<string name="move_wrong_cards">Move wrong cards to</string>
	<string name="enable_mathml">Enable MathML</string>
	<string name="enable_mathml_desc">Enables MathML to display formulas. This may slow down the app.</string>
</resources>
