<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2015 Gian Ulli
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
			android:key="font_size"
			android:title="@string/set_font_size"
			android:summary="@string/set_font_size_desc"
			android:entries="@array/font_sizes"
			android:entryValues="@array/font_sizes"
			android:defaultValue="20"/>

	<CheckBoxPreference
			android:key="enable_mathml"
			android:title="Enable MathML"
			android:summary="Enables MathML to display formulas. This may slow down the app."
			android:defaultValue="false"/>

	<Preference
			android:key="reset_hidden_boards"
			android:title="@string/reset_hidden_boards"/>

</PreferenceScreen>